--- a/ClienteEscritorioNutricion/src/clienteescritorionutricion/FXMLAdminPacientes.fxml
+++ b/ClienteEscritorioNutricion/src/clienteescritorionutricion/FXMLAdminPacientes.fxml
@@ -39,7 +39,7 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="731.0" layoutY="77.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #FF3939;" text="Eliminar">
+      <Button layoutX="731.0" layoutY="77.0" mnemonicParsing="false" onAction="#btnEliminar" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #FF3939;" text="Eliminar">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
