--- a/ClienteEscritorioNutricion/src/clienteescritorionutricion/FXMLAdminPacientes.fxml
+++ b/ClienteEscritorioNutricion/src/clienteescritorionutricion/FXMLAdminPacientes.fxml
@@ -35,13 +35,18 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="482.0" layoutY="76.0" mnemonicParsing="false" onAction="#btnFormularioModificar" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #39BAFF;" text="Modificar">
+      <Button layoutX="419.0" layoutY="77.0" mnemonicParsing="false" onAction="#btnFormularioModificar" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #39BAFF;" text="Modificar">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button layoutX="731.0" layoutY="77.0" mnemonicParsing="false" onAction="#btnEliminar" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #FF3939;" text="Eliminar">
+      <Button layoutX="782.0" layoutY="76.0" mnemonicParsing="false" onAction="#btnEliminar" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #FF3939;" text="Eliminar">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
+      <Button layoutX="603.0" layoutY="77.0" mnemonicParsing="false" onAction="#btnFormularioDomicilio" prefHeight="26.0" prefWidth="150.0" style="-fx-background-color: #DE643C;" text="Domicilio">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
